fix top bar and time alignment between pages

--- a/web/src/app/components/book-page/book-page.component.scss
+++ b/web/src/app/components/book-page/book-page.component.scss
@@ -1,6 +1,6 @@
 .availability-toolbar {
   background-color: #74be06;
-  height: 70px;
+  height: 55px;
   color: white;
   font-size: 28px;
   font-style: oblique;
@@ -25,7 +25,6 @@ app-time {
 
 app-time {
   margin-right: 10%;
-  margin-top: 30px;
 }
 
 .main-button {
