--- a/web/src/app/components/main-page/main-page.component.scss
+++ b/web/src/app/components/main-page/main-page.component.scss
@@ -1,5 +1,5 @@
 .availability-toolbar {
-  height: 48px;
+  height: 55px;
 }
 
 .title-card {
