--- a/web/src/app/components/schedule-page/schedule-page.component.scss
+++ b/web/src/app/components/schedule-page/schedule-page.component.scss
@@ -1,6 +1,6 @@
 .availability-toolbar {
   background-color: #74be06;
-  height: 70px;
+  height: 55px;
   color: white;
   font-size: 28px;
   font-style: oblique;
